# variational-transformers

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/: components.py  distributions.py  main.py  train.py  transformers.py  utils.py
tests/: test_components.py  test_distributions.py
