[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "variational_transformers"
authors = [
    {name = "George Whittle", email = "george.whittle@reuben.ox.ac.uk"}
]
version = "0.0.0"
dependencies = [
    "torch>=2.5.0",
    "tqdm"
]
requires-python = ">=3.12.0"


[project.optional-dependencies]
dev = [
    "pytest"
]


[project.urls]
Homepage = "https://github.com/GWhittle110/variational-transformers"


[tools.pytest.ini.options]
addopts = [
    "--import-mode=importlib"
]
pythonpath = "src"